<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Baby Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="switch_to_rx_mode">Switch to Receiver Mode</string>
    <string name="switch_to_tx_mode">Switch to Transmitter Mode</string>
    <string name="action_quit">Quit</string>
    <string name="title_activity_client_status">Baby Monitor</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_baby_monitor">Baby Monitor</string>
    <string name="title_activity_global_settings">Settings</string>

    <!-- Trust and certs -->
    <string name="trust_added">New BabyMonitor trusted</string>
    <string name="trust_add_failed">Failed to add new BabyMonitor</string>

    <!-- Preferences -->
    <string name="pref_monitorMode">Default Mode</string>
    <string name="pref_monitorMode_default">client</string>

    <string-array name="pref_monitorMode_entries">
        <item>Receiver</item>
        <item>Transmitter</item>
    </string-array>
    <string-array name="pref_monitorMode_values">
        <item>rx</item>
        <item>tx</item>
    </string-array>

    <!-- Preference strings -->
    <string name="run_on_boot">Run on Boot</string>
    <string name="run_on_boot_desc">Run in background when phone starts</string>
    <string name="no_run_on_boot_desc">Wait for user to launch monitor</string>
    <string name="full_audio">Full Audio</string>
    <string name="full_audio_desc">Play detected audio</string>
    <string name="notification_only_desc">Use notification only when noise detected</string>
    <string name="use_mobile_desc">Use mobile data for connection</string>
    <string name="no_mobile_desc">Do not use mobile data</string>
    <string name="use_mobile">Connect over mobile</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="notification_sound_desc">Sound to play if not using full audio</string>
    <string name="use_vibration">Vibrate</string>
    <string name="use_led">LED</string>
    <string name="use_led_desc">Blink LED on noise</string>
    <string name="no_led_desc">No LED on noise</string>
    <string name="use_wifi">Connect over Wifi</string>
    <string name="use_wifi_desc">Connect to server when on wifi</string>
    <string name="no_wifi_desc">Do not use wifi to connect</string>
    <string name="mumble_host">Server</string>
    <string name="mumble_host_desc">Host</string>
    <string name="mumble_user">Username</string>
    <string name="mumble_user_desc">Mumble username</string>
    <string name="mumble_channel">Channel</string>
    <string name="mumble_channel_desc">Join X on connect</string>
    <string name="tx_mode">Transmitter Mode</string>
    <string name="tx_mode_on">Will transmitter sound</string>
    <string name="tx_mode_off">Will receive sound</string>

    <!-- Menu -->
    <string name="soundActivated">Sound Activated</string>
    <string name="alwaysListening">Always On</string>
    <string name="change_server">Change Server</string>
    <string name="switch_to_tx_mode_short">Switch to Tx</string>
    <string name="switch_to_rx_mode_short">Switch to Rx Mode</string>
    <string name="local_status_tab_name">Local Status</string>
    <string name="remote_status_tab_name">Remote Status</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
