<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.moreharts.babymonitor.ui.ClientStatus" >
    <item android:id="@+id/connect"
        android:title="@string/connect"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/disconnect"
        android:title="@string/disconnect"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/change_server"
        android:title="@string/change_server"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/switch_to_tx"
        android:title="@string/switch_to_tx_mode"
        android:titleCondensed="@string/switch_to_tx_mode_short"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/switch_to_rx"
        android:title="@string/switch_to_rx_mode"
        android:titleCondensed="@string/switch_to_rx_mode_short"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_quit"
        android:title="@string/action_quit"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
